--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^4.6.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  firebase_messaging: ^14.7.6
   
 dev_dependencies:
   flutter_test:
