--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 33 //+
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -47,6 +47,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.flutter_osmanli"
+        multiDexEnabled true //+
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 21
@@ -69,6 +70,9 @@ flutter {
 }
 
 dependencies {
+    implementation 'androidx.window:window:1.0.0' //+
+    implementation 'androidx.window:window-java:1.0.0' //+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2' //+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
