--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   firebase_storage: ^11.0.16
-  firebase_core: ^2.13.0
+  firebase_core: ^2.24.1
   cloud_firestore: ^4.4.5
   carousel_slider: ^4.2.1
-  firebase_messaging: ^14.7.6
+  firebase_messaging: ^14.7.10
   flutter:
     sdk: flutter
 
@@ -41,12 +41,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.6
+  http: ^1.1.0
   firebase_database: ^10.2.1
   firebase_auth: ^4.6.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_local_notifications: ^16.2.0
+  permission_handler: ^11.0.1
   
 dev_dependencies:
   flutter_test:
@@ -57,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
